--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
       margin: 0;
       padding: 0;
       font-family: 'Handlee', cursive;
-      overflow: hidden;
+      overflow: auto; /* Cambiado de hidden a auto */
       background-color: #f3f0e7;
     }
+
     .book {
       position: relative;
       width: 100vw;
       height: 100vh;
       perspective: 2000px;
     }
+
     .page {
       position: absolute;
       width: 90%;
@@ -30,34 +32,43 @@
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
       transform-origin: left;
       transition: transform 1s;
-      overflow: hidden;
+      overflow: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
       background-size: cover;
+      text-align: center;
     }
+
     .page img {
       max-width: 80%;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      height: auto;
     }
+
     .message {
       margin: 20px;
       font-size: 1.4rem;
       text-align: center;
       color: #5a3e36;
+      word-wrap: break-word;
+      max-width: 90%;
     }
+
     .type {
       animation: type 3s steps(40, end);
       white-space: nowrap;
       overflow: hidden;
     }
+
     @keyframes type {
       from { width: 0; }
       to { width: 100%; }
     }
+
     .sparkle {
       position: absolute;
       width: 6px;
@@ -67,13 +78,16 @@
       box-shadow: 0 0 10px gold;
       animation: sparkle 1.5s infinite ease-in-out;
     }
+
     @keyframes sparkle {
       0%, 100% { transform: scale(1); opacity: 0.5; }
       50% { transform: scale(1.5); opacity: 1; }
     }
+
     .page.flipped {
       transform: rotateY(-180deg);
     }
+
     .book .page:nth-child(1) { z-index: 5; }
     .book .page:nth-child(2) { z-index: 4; }
     .book .page:nth-child(3) { z-index: 3; }
@@ -99,10 +113,12 @@
       background-size: cover;
       background-position: center;
     }
+
     .page.final .message {
-  font-weight: bold;
-  color: #f3f0e7;
-}
+      font-weight: bold;
+      color: #f3f0e7;
+    }
+
     .gift {
       display: flex;
       flex-direction: column;
@@ -116,19 +132,62 @@
       background-color: #f3f0e7;
       z-index: 10;
     }
+
     .gift img {
-      width: 150px;
-      cursor: pointer;
       width: 250px;
+      cursor: pointer;
       transition: transform 0.3s;
     }
+
     .gift img:hover {
       transform: scale(1.1);
     }
+
     .gift p {
       font-size: 1.5rem;
       color: #5a3e36;
       margin-top: 20px;
+      text-align: center;
+      padding: 0 20px;
+    }
+
+    /* RESPONSIVE ADAPTACIÓN PARA CELULARES */
+    @media (max-width: 768px) {
+      .message {
+        font-size: 1rem;
+        padding: 0 10px;
+      }
+
+      .type {
+        white-space: normal;
+        animation: none;
+      }
+
+      .page img {
+        max-width: 90%;
+        height: auto;
+      }
+
+      .next-btn, .restart-btn {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+      }
+
+      .gift img {
+        width: 200px;
+      }
+
+      .gift p {
+        font-size: 1.2rem;
+        padding: 0 10px;
+      }
+
+      .page {
+        width: 95%;
+        height: 95%;
+        top: 2.5%;
+        left: 2.5%;
+      }
     }
   </style>
 </head>
@@ -148,7 +207,7 @@
       <p class="message type">Hoy celebramos la existencia de alguien verdaderamente especial 💖</p>
       <p class="message type">No solo porque es su cumpleaños, sino porque su sola presencia</p>
       <p class="message type">ilumina la vida de quienes la rodean.</p>
-      <p class="message type"> Te mereces todo el amor, la felicidad y los abrazos del universo. 🌸</p>     
+      <p class="message type">Te mereces todo el amor, la felicidad y los abrazos del universo. 🌸</p>
       <button class="next-btn" onclick="nextPage(1)">Siguiente</button>
     </div>
     <div class="page" id="page2">
@@ -160,7 +219,7 @@
       <button class="next-btn" onclick="nextPage(2)">Siguiente</button>
     </div>
     <div class="page" id="page3">
-      <img src="yusi.gif"  height="300" width="250" alt="Imagen 3">
+      <img src="yusi.gif" height="300" width="250" alt="Imagen 3">
       <p class="message type">Como madre eres un verdadero ejemplo de amor y valentía💕</p>
       <p class="message type">Sin duda Kiarita tiene la fortuna de tener a una mamá </p>
       <p class="message type">que lucha día a día para darle lo mejor❤️</p>
@@ -168,7 +227,7 @@
       <button class="next-btn" onclick="nextPage(3)">Siguiente</button>
     </div>
     <div class="page final" id="page4">
-       <img src="cumpleaños2.gif"  height="200" width="200" alt="Imagen 3">
+      <img src="cumpleaños2.gif" height="200" width="200" alt="Imagen 4">
       <p class="message type">¡Feliz Cumpleaños Yusi !!! 🎂 Que tu vida se llene </p>
       <p class="message type">de amor, sueños y magia ✨ Hoy se vale todo🤭</p>
       <p class="message type">Que este nuevo año venga con muchas sorpresas lindas… 😄🎈</p>
@@ -177,19 +236,16 @@
   </div>
 
   <script>
-  function openGift() {
-  document.getElementById('giftBox').style.display = 'none';
-  document.getElementById('bookContent').style.display = 'block';
+    function openGift() {
+      document.getElementById('giftBox').style.display = 'none';
+      document.getElementById('bookContent').style.display = 'block';
+      const music = document.getElementById('bgMusic');
+      music.play().catch(error => {
+        console.log("El navegador bloqueó el autoplay:", error);
+      });
+      createSparks();
+    }
 
-  // Iniciar la música después del clic
-  const music = document.getElementById('bgMusic');
-  music.play().catch(error => {
-    console.log("El navegador bloqueó el autoplay:", error);
-  });
-  createSparks();
-}
-
-    
     function nextPage(num) {
       const page = document.getElementById(`page${num}`);
       page.classList.add('flipped');
