--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
     .message {
-      margin: 1px;
+      margin: 10px;
       font-size: 1rem;
-      line-height: 1;
+      line-height: 1.3;
       text-align: center;
       color: #5a3e36;
+      word-wrap: break-word;
       max-width: 90%;
     }
     .type {
