--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
   <div class="book" id="bookContent" style="display:none;">
     <div class="page" id="page1">
       <img src="img.gif" height="300" width="350" alt="Imagen 1">
-      <p class="message type">Hoy celebramos la existencia de alguien verdaderamente especial 💖</p>
-      <p class="message type">No solo porque es su cumpleaños, sino porque su sola presencia</p>
+      <p class="message type">Hoy celebramos la existencia de alguien muy especial 💖</p>
+      <p class="message type">No solo porque es su cumpleaños, sino porque su presencia</p>
       <p class="message type">ilumina la vida de quienes la rodean.</p>
-      <p class="message type"> Te mereces todo el amor, la felicidad y los abrazos del universo. 🌸</p>     
+      <p class="message type"> Te mereces todo el amor, la felicidad y los abrazos del universo 🌸</p>     
       <button class="next-btn" onclick="nextPage(1)">Siguiente</button>
     </div>
     <div class="page" id="page2">
@@ -179,7 +179,7 @@
       <p class="message type">Como madre eres un verdadero ejemplo de amor y valentía💕</p>
       <p class="message type">Sin duda Kiarita tiene la fortuna de tener a una mamá </p>
       <p class="message type">que lucha día a día para darle lo mejor❤️</p>
-      <p class="message type">Que el destino siempre las mantenga juntas, felices y rodeadas de amor. 🌈👩‍👧💕</p>
+      <p class="message type">Que Dios siempre las mantenga juntas, felices y rodeadas de amor. 🌈👩‍👧💕</p>
       <button class="next-btn" onclick="nextPage(3)">Siguiente</button>
     </div>
     <div class="page final" id="page4">
