--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
       <p class="message type">Hoy celebramos la existencia de alguien muy especial 💖</p>
       <p class="message type">No solo porque es su cumpleaños, sino porque su presencia</p>
       <p class="message type">ilumina la vida de quienes la rodean.</p>
-      <p class="message type"> Te mereces todo el amor, la felicidad y los abrazos del universo 🌸</p>     
+      <p class="message type"> Te mereces todo el amor, la felicidad</p>
+      <p class="message type">y los abrazos del universo 🌸</p> 
       <button class="next-btn" onclick="nextPage(1)">Siguiente</button>
     </div>
     <div class="page" id="page2">
@@ -176,10 +177,11 @@
     </div>
     <div class="page" id="page3">
       <img src="yusi.gif"  height="300" width="250" alt="Imagen 3">
-      <p class="message type">Como madre eres un verdadero ejemplo de amor y valentía💕</p>
+      <p class="message type">Como madre eres ejemplo de amor y valentía💕</p>
       <p class="message type">Sin duda Kiarita tiene la fortuna de tener a una mamá </p>
       <p class="message type">que lucha día a día para darle lo mejor❤️</p>
-      <p class="message type">Que Dios siempre las mantenga juntas, felices y rodeadas de amor. 🌈👩‍👧💕</p>
+      <p class="message type">Que Dios siempre las mantenga juntas,</p>
+       <p class="message type">felices y rodeadas de amor. 🌈👩‍👧💕</p>
       <button class="next-btn" onclick="nextPage(3)">Siguiente</button>
     </div>
     <div class="page final" id="page4">
