--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
       <img src="cumpleaños2.gif"  height="200" width="200" alt="Imagen 3">
       <p class="message type">¡Feliz Cumpleaños Yusi !!! 🎂 Que tu vida se llene </p>
       <p class="message type">de amor, sueños y magia ✨ Hoy se vale todo🤭</p>
-      <p class="message type">Que este nuevo año venga con muchas sorpresas lindas… 😄🎈</p>
+      <p class="message type">Que este nuevo año venga con muchas sorpresas lindas…</p>
+      <p class="message type">😄🎈</p>
       <button class="restart-btn" onclick="restartBook()">Volver al inicio</button>
     </div>
   </div>
